# air001-quickstart

./: Cargo.toml  Readme.md  build.rs  memory.x
examples/: blinky.rs  blinky_pac.rs  gpio.rs  serial.rs  serial_pac.rs
src/: main.rs
