[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
air001-pac = "0.0.2"
air001-hal = { git = "https://github.com/air001-rs/air001-hal", branch = "main" }
nb = "1"
cortex-m-semihosting = "0.5.0"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
